# ssh-client

./: .gitignore  CMakeLists.txt  README.md  io.github.benladamm.ssh-client.desktop  io.github.benladamm.ssh-client.metainfo.xml  io.github.benladamm.ssh-client.yml  io.github.benladamm.ssh_client.desktop  io.github.benladamm.ssh_client.metainfo.xml  io.github.benladamm.ssh_client.yml
include/: db.h  home_view.h  hosts_view.h  settings_view.h  ssh_backend.h  ssh_sftp.h  terminal_view.h  theme_manager.h  window.h
resources/: style-light.css  style.css
src/: main.c  ssh_backend.c  ssh_sftp.c
src/storage/: db.c
src/ui/: home_view.c  hosts_view.c  settings_view.c  sftp_view.c  sftp_view.h  terminal_view.c  theme_manager.c  window.c
